# qemu

./: .gitignore  meson.build
configs/devices/robonaut-softmmu/: default.mak
configs/targets/: robonaut-softmmu.mak
hw/: Kconfig  meson.build
hw/robonaut/: Kconfig  meson.build  nucleo_f446re.c  robonaut.c  simulatorConnection.c  simulatorConnection.h  sockConnection.c  sockConnection.h  stm32f446_flash.c  stm32f446_flash.h  stm32f446_gpio.c  stm32f446_gpio.h  stm32f446_i2c.c  stm32f446_i2c.h  stm32f446_pwr.c  stm32f446_pwr.h  stm32f446_rcc.c  stm32f446_rcc.h  stm32f446_soc.c  stm32f446_soc.h  stm32f446_timer.c  stm32f446_timer.h  stm32f446_util.c  stm32f446_util.h  stm32f4xx_flash.c  stm32f4xx_rcc.c  stm32f4xx_timer.c  stm32f4xx_timer.h
include/hw/robonaut/: stm32f446_soc.h  stm32f4xx_flash.h  stm32f4xx_rcc.h
