robonaut_ss.add(when: 'CONFIG_ROBONAUT', if_true: files(
'robonaut.c',
'stm32f446_soc.c',
'stm32f446_timer.c',
'stm32f446_flash.c',
'stm32f446_rcc.c',
'stm32f446_util.c',
'stm32f446_pwr.c',
'stm32f446_i2c.c',
'simulatorConnection.c',
'simulatorConnection.h',
'sockConnection.c',
'sockConnection.h'))
